appId: com.illinicover.app
---
- launchApp
- tapOn: "Deals"
- assertVisible: "White Claw"
- assertVisible: "Michelob Ultra"
- assertVisible: "Bombs"
